--- a/MyDiaryCalendar/Resources/Storyboards/MyDiaryCalendar/Resources/Storyboards/Base.lproj/Search.storyboard
+++ b/MyDiaryCalendar/Resources/Storyboards/MyDiaryCalendar/Resources/Storyboards/Base.lproj/Search.storyboard
@@ -33,41 +33,43 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4Q0-QB-k8b">
-                                                    <rect key="frame" x="10" y="35.5" width="309.5" height="74.5"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="nlG-Ho-hPA">
+                                                    <rect key="frame" x="10" y="35.5" width="394" height="74.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2021/01/01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gc8-x6-nVb">
-                                                            <rect key="frame" x="0.0" y="0.0" width="309.5" height="16"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kEY-2x-7qD">
-                                                            <rect key="frame" x="0.0" y="24" width="309.5" height="50.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                            <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4Q0-QB-k8b">
+                                                            <rect key="frame" x="0.0" y="0.0" width="309.5" height="74.5"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2021/01/01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gc8-x6-nVb">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="309.5" height="16"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kEY-2x-7qD">
+                                                                    <rect key="frame" x="0.0" y="24" width="309.5" height="50.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oAm-RT-5Ee">
+                                                            <rect key="frame" x="319.5" y="0.0" width="74.5" height="74.5"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="oAm-RT-5Ee" secondAttribute="height" multiplier="1:1" id="zpt-M6-QPC"/>
+                                                            </constraints>
+                                                        </imageView>
                                                     </subviews>
                                                 </stackView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oAm-RT-5Ee">
-                                                    <rect key="frame" x="329.5" y="35.5" width="74.5" height="74.5"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" secondItem="oAm-RT-5Ee" secondAttribute="height" multiplier="1:1" id="zpt-M6-QPC"/>
-                                                    </constraints>
-                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="oAm-RT-5Ee" firstAttribute="top" secondItem="Zev-al-w99" secondAttribute="bottom" constant="5" id="2Hd-xo-iDN"/>
+                                                <constraint firstAttribute="trailing" secondItem="nlG-Ho-hPA" secondAttribute="trailing" constant="10" id="5YE-Df-BCe"/>
                                                 <constraint firstItem="Zev-al-w99" firstAttribute="top" secondItem="qRj-jR-fjy" secondAttribute="top" constant="10" id="6Sa-ms-gD7"/>
-                                                <constraint firstItem="4Q0-QB-k8b" firstAttribute="top" secondItem="Zev-al-w99" secondAttribute="bottom" constant="5" id="6Uf-Iz-adi"/>
                                                 <constraint firstItem="Zev-al-w99" firstAttribute="leading" secondItem="qRj-jR-fjy" secondAttribute="leading" constant="10" id="8v9-DO-Jjq"/>
-                                                <constraint firstAttribute="bottom" secondItem="oAm-RT-5Ee" secondAttribute="bottom" constant="10" id="Txx-0T-ykt"/>
-                                                <constraint firstItem="4Q0-QB-k8b" firstAttribute="leading" secondItem="qRj-jR-fjy" secondAttribute="leading" constant="10" id="Z8Y-x4-cgQ"/>
-                                                <constraint firstAttribute="trailing" secondItem="oAm-RT-5Ee" secondAttribute="trailing" constant="10" id="ZFt-Gy-nj6"/>
-                                                <constraint firstAttribute="bottom" secondItem="4Q0-QB-k8b" secondAttribute="bottom" constant="10" id="rot-Zf-R5r"/>
+                                                <constraint firstItem="nlG-Ho-hPA" firstAttribute="top" secondItem="Zev-al-w99" secondAttribute="bottom" constant="5" id="YuY-Xb-jOL"/>
+                                                <constraint firstAttribute="bottom" secondItem="nlG-Ho-hPA" secondAttribute="bottom" constant="10" id="Zl9-Dh-hQX"/>
+                                                <constraint firstItem="nlG-Ho-hPA" firstAttribute="leading" secondItem="qRj-jR-fjy" secondAttribute="leading" constant="10" id="mxl-uj-Nju"/>
                                                 <constraint firstAttribute="trailing" secondItem="Zev-al-w99" secondAttribute="trailing" constant="10" id="sxd-AN-jDX"/>
-                                                <constraint firstItem="oAm-RT-5Ee" firstAttribute="leading" secondItem="4Q0-QB-k8b" secondAttribute="trailing" constant="10" id="thx-aU-5OJ"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
