--- a/MyDiaryCalendar/Resources/Storyboards/MyDiaryCalendar/Resources/Storyboards/Base.lproj/Home.storyboard
+++ b/MyDiaryCalendar/Resources/Storyboards/MyDiaryCalendar/Resources/Storyboards/Base.lproj/Home.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,18 +17,112 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Osq-jq-nvl">
-                                <rect key="frame" x="184" y="438" width="46" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="DFS-2y-7y6">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="homeTableViewCell" rowHeight="184" id="w5A-rA-8xN" customClass="HomeTableViewCell" customModule="MyDiaryCalendar" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="184"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="w5A-rA-8xN" id="hfM-HU-9az">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="184"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6TE-66-I32">
+                                                    <rect key="frame" x="20" y="21" width="374" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SH8-57-9Pb">
+                                                    <rect key="frame" x="0.0" y="52" width="414" height="122"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RSJ-EA-IE6">
+                                                        <size key="itemSize" width="128" height="128"/>
+                                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                        <inset key="sectionInset" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                    </collectionViewFlowLayout>
+                                                    <cells>
+                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="homeCollectionViewCell" id="RSD-P4-WId" customClass="HomeCollectionViewCell" customModule="MyDiaryCalendar" customModuleProvider="target">
+                                                            <rect key="frame" x="20" y="-3" width="128" height="128"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="spW-XD-d07">
+                                                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                                <autoresizingMask key="autoresizingMask"/>
+                                                                <subviews>
+                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hFy-GQ-03r">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                                    </imageView>
+                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vxd-JT-P5n">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                                        <subviews>
+                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cqO-Ch-AIg">
+                                                                                <rect key="frame" x="8" y="8" width="112" height="112"/>
+                                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                                <nil key="textColor"/>
+                                                                                <nil key="highlightedColor"/>
+                                                                            </label>
+                                                                        </subviews>
+                                                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="bottom" secondItem="cqO-Ch-AIg" secondAttribute="bottom" constant="8" id="CMn-bj-90h"/>
+                                                                            <constraint firstAttribute="trailing" secondItem="cqO-Ch-AIg" secondAttribute="trailing" constant="8" id="OqP-BV-unu"/>
+                                                                            <constraint firstItem="cqO-Ch-AIg" firstAttribute="leading" secondItem="vxd-JT-P5n" secondAttribute="leading" constant="8" id="ZAL-Gp-MZT"/>
+                                                                            <constraint firstItem="cqO-Ch-AIg" firstAttribute="top" secondItem="vxd-JT-P5n" secondAttribute="top" constant="8" id="apn-Nr-hZM"/>
+                                                                        </constraints>
+                                                                    </view>
+                                                                </subviews>
+                                                                <constraints>
+                                                                    <constraint firstItem="vxd-JT-P5n" firstAttribute="top" secondItem="spW-XD-d07" secondAttribute="top" id="EOg-fN-7ma"/>
+                                                                    <constraint firstItem="hFy-GQ-03r" firstAttribute="leading" secondItem="spW-XD-d07" secondAttribute="leading" id="F9B-16-F9n"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="vxd-JT-P5n" secondAttribute="trailing" id="Hti-xU-kr1"/>
+                                                                    <constraint firstAttribute="bottom" secondItem="hFy-GQ-03r" secondAttribute="bottom" id="Ip9-9T-Uw1"/>
+                                                                    <constraint firstItem="vxd-JT-P5n" firstAttribute="leading" secondItem="spW-XD-d07" secondAttribute="leading" id="N8R-C4-IAE"/>
+                                                                    <constraint firstItem="hFy-GQ-03r" firstAttribute="top" secondItem="spW-XD-d07" secondAttribute="top" id="Xyh-sd-cMv"/>
+                                                                    <constraint firstAttribute="bottom" secondItem="vxd-JT-P5n" secondAttribute="bottom" id="d4f-0Q-wce"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="hFy-GQ-03r" secondAttribute="trailing" id="lYE-dL-CeP"/>
+                                                                </constraints>
+                                                            </collectionViewCellContentView>
+                                                            <connections>
+                                                                <outlet property="contentLabel" destination="cqO-Ch-AIg" id="CsQ-1k-7GE"/>
+                                                                <outlet property="imageView" destination="hFy-GQ-03r" id="6vn-nz-ZwC"/>
+                                                            </connections>
+                                                        </collectionViewCell>
+                                                    </cells>
+                                                </collectionView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="6TE-66-I32" secondAttribute="trailing" constant="20" id="6QM-sw-Kig"/>
+                                                <constraint firstAttribute="trailing" secondItem="SH8-57-9Pb" secondAttribute="trailing" id="6cR-oG-EGQ"/>
+                                                <constraint firstAttribute="bottom" secondItem="SH8-57-9Pb" secondAttribute="bottom" constant="10" id="CHL-mz-AdR"/>
+                                                <constraint firstItem="6TE-66-I32" firstAttribute="top" secondItem="hfM-HU-9az" secondAttribute="topMargin" constant="10" id="Cxn-Ye-ubC"/>
+                                                <constraint firstItem="SH8-57-9Pb" firstAttribute="leading" secondItem="hfM-HU-9az" secondAttribute="leading" id="VHD-JY-Oj1"/>
+                                                <constraint firstItem="SH8-57-9Pb" firstAttribute="top" secondItem="6TE-66-I32" secondAttribute="bottom" constant="10" id="ijb-ne-eVw"/>
+                                                <constraint firstItem="6TE-66-I32" firstAttribute="leading" secondItem="hfM-HU-9az" secondAttribute="leading" constant="20" id="o9D-ec-QrI"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="categoryLabel" destination="6TE-66-I32" id="mCP-dU-CZh"/>
+                                            <outlet property="collectionView" destination="SH8-57-9Pb" id="13m-Q2-RhI"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="DFS-2y-7y6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WIt-fX-crh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DFS-2y-7y6" secondAttribute="bottom" id="d0p-6V-pVZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DFS-2y-7y6" secondAttribute="trailing" id="dPK-Dg-vZM"/>
+                            <constraint firstItem="DFS-2y-7y6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="sZ0-3z-1ni"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="HOME" id="u3H-RD-bpW"/>
+                    <connections>
+                        <outlet property="tableView" destination="DFS-2y-7y6" id="R1g-A2-BAL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
